Fixed styling on mobile for the footer page

--- a/style-resume.css
+++ b/style-resume.css
@@ -25,7 +25,7 @@
 
 /* Tablet styling Portrait*/
 
-@media only screen and (max-device-width: 820px) and (orientation: portrait) {
+@media only screen and (min-device-width: 431px) and (max-device-width: 820px) and (orientation: portrait) {
 
     footer {
         position: fixed;
